--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
     "type": "library",
-    "name": "nguyenanhung/template-php-lib",
-    "description": "Template for repository helper, library - Basic, Simple and Lightweight",
+    "name": "nguyenanhung/http-download-helper",
+    "description": "Http Download helper, library - Basic, Simple and Lightweight",
     "keywords": [
         "template",
         "helper",
         "library",
         "php"
     ],
-    "homepage": "https://github.com/nguyenanhung/template-php-lib",
+    "homepage": "https://github.com/nguyenanhung/http-download-helper",
     "license": "MIT",
     "minimum-stability": "stable",
     "authors": [
@@ -24,7 +24,7 @@
     },
     "autoload": {
         "psr-4": {
-            "nguyenanhung\\Libraries\\TemplateREPLACE\\": "src/"
+            "nguyenanhung\\Libraries\\HttpDownload\\": "src/"
         },
         "files": [
             "helpers/helpers.php"
